Update courses page
- Update collection CTA links

--- a/courses/index.html
+++ b/courses/index.html
@@ -205,17 +205,17 @@ permalink: /courses/
               <div class="row">
                 <div class="col-md-5">
                   <figure>
-                    <a href="{{ site.gymurl }}/collections/design-systems"><img alt="Design Systems Collection cover image." src="{{ site.url }}/img/hub-pages/og/design-systems-collection-og.png" decoding="async" fetchpriority="high"></a>
+                    <a href="{{ site.gymurl }}/design-systems"><img alt="Design Systems Collection cover image." src="{{ site.url }}/img/hub-pages/og/design-systems-collection-og.png" decoding="async" fetchpriority="high"></a>
                   </figure>
                 </div>
                 <div class="col-md-7">
                   <article>
                     <header>
-                        <h2><a href="{{ site.gymurl }}/collections/design-systems">Design Systems</a></h2>
+                        <h2><a href="{{ site.gymurl }}/design-systems">Design Systems</a></h2>
                     </header>
                     <p>Teamwork (and creating effective pattern libraries) makes the dream work.</p>
                     <div class="cta">
-                      <a class="gym-button natural" href="{{ site.gymurl }}{{ site.data.take5.GYM-5042.url }}">Learn More</a>
+                      <a class="gym-button natural" href="{{ site.gymurl }}/design-systems">Learn More</a>
                     </div>
                   </article>
                 </div>
