--- a/courses/full/index.html
+++ b/courses/full/index.html
@@ -6,23 +6,23 @@ permalink: /courses/full/
   {%- include partials/test-top.html -%}
 {%- endif -%}
 
-{%- assign courses = site.data.courses-page -%}
+{%- assign main = site.data.courses-page -%}
 {%- assign about = site.data.courses-page.about_section -%}
 
 <nav class="courses-format" aria-label="Courses">
   <div class="container">
     <ul role="list">
       <li>
-        <a href="/courses/full" aria-current="page">{{ courses.full_courses.format }}</a>
+        <a href="/courses/full" aria-current="page">{{ main.full_courses.format }}</a>
       </li>
       <li>
-        <a href="/courses/gym-shorts">{{ courses.short_courses.format }}</a>
+        <a href="/courses/gym-shorts">{{ main.gym_shorts.format }}</a>
       </li>
       <li>
-        <a href="/courses/take5">{{ courses.tutorials.format }}</a>
+        <a href="/courses/take5">{{ main.take5_tutorials.format }}</a>
       </li>
       <li>
-        <a href="/collections">Collections</a>
+        <a href="/collections">{{ main.collections.format }}</a>
       </li>
     </ul>
   </div>
