--- a/courses/gym-shorts/index.html
+++ b/courses/gym-shorts/index.html
@@ -6,23 +6,23 @@ permalink: /courses/gym-shorts/
   {%- include partials/test-top.html -%}
 {%- endif -%}
 
-{%- assign courses = site.data.courses-page -%}
+{%- assign main = site.data.courses-page -%}
 {%- assign about = site.data.courses-page.about_section -%}
 
 <nav class="courses-format" aria-label="Courses">
   <div class="container">
     <ul role="list">
       <li>
-        <a href="/courses/full">{{ courses.full_courses.format }}</a>
+        <a href="/courses/full">{{ main.full_courses.format }}</a>
       </li>
       <li>
-        <a href="/courses/gym-shorts" aria-current="page">{{ courses.short_courses.format }}</a>
+        <a href="/courses/gym-shorts" aria-current="page">{{ main.gym_shorts.format }}</a>
       </li>
       <li>
-        <a href="/courses/take5">{{ courses.tutorials.format }}</a>
+        <a href="/courses/take5">{{ main.take5_tutorials.format }}</a>
       </li>
       <li>
-        <a href="/collections">Collections</a>
+        <a href="/collections">{{ main.collections.format }}</a>
       </li>
     </ul>
   </div>
@@ -32,7 +32,7 @@ permalink: /courses/gym-shorts/
 
   <header class="about">
     <div class="container">
-      <h1>{{ courses.short_courses.format }}</h1>
+      <h1>{{ courses.gym_shorts.format }}</h1>
       <p>
         <span class="block"><strong>Free online short courses.</strong> Earn a badge in a few hours.</span>
         {{ courses.main.short_description }}
@@ -40,13 +40,13 @@ permalink: /courses/gym-shorts/
       <dl class="row">
         <div class="col-md-5">
           <dt>{{ about.lists[1] }}</dt>
-          {%- for benefits in about.short_courses[1] -%}
+          {%- for benefits in about.gym_shorts[1] -%}
           <dd>{{ benefits.label }}</dd>
           {%- endfor -%}
         </div>
         <div class="col-md-7">
           <dt>{{ about.lists[2] }}</dt>
-          {%- for length in about.short_courses[2] -%}
+          {%- for length in about.gym_shorts[2] -%}
           <dd>{{ length.label }}</dd>
           {%- endfor -%}
         </div>
