--- a/courses/index.html
+++ b/courses/index.html
@@ -7,23 +7,25 @@ permalink: /courses/
 {%- endif -%}
 
 {%- assign base_path = "/courses/take5/" | prepend: site.gymurl -%}
-{%- assign courses = site.data.courses-page -%}
+{%- assign main = site.data.courses-page -%}
 {%- assign about = site.data.courses-page.about_section -%}
+{%- assign courses = site.data.courses -%}
+{%- assign take5 = site.data.take5 -%}
 
 <nav class="courses-format" aria-label="Courses">
   <div class="container">
     <ul role="list">
       <li>
-        <a href="/courses/full">{{ courses.full_courses.format }}</a>
+        <a href="/courses/full">{{ main.full_courses.format }}</a>
       </li>
       <li>
-        <a href="/courses/gym-shorts">{{ courses.short_courses.format }}</a>
+        <a href="/courses/gym-shorts">{{ main.gym_shorts.format }}</a>
       </li>
       <li>
-        <a href="/courses/take5">{{ courses.tutorials.format }}</a>
+        <a href="/courses/take5">{{ main.take5_tutorials.format }}</a>
       </li>
       <li>
-        <a href="/collections">Collections</a>
+        <a href="/collections">{{ main.collections.format }}</a>
       </li>
     </ul>
   </div>
@@ -33,10 +35,10 @@ permalink: /courses/
 
   <header class="about">
     <div class="container">
-      <h1>{{ courses.main.title }}</h1>
+      <h1>{{ main.main.title }}</h1>
       <p>
-        <strong class="block">{{ courses.main.tagline }}</strong>
-        {{ courses.main.short_description }}
+        <strong class="block">{{ main.main.tagline }}</strong>
+        {{ main.main.short_description }}
       </p>
     </div>
   </header>
@@ -47,38 +49,38 @@ permalink: /courses/
         <div class="white-panel">
           <article class="courses-promo">
             <h2>
-              {{ courses.full_courses.format }}
+              {{ main.full_courses.format }}
             </h2>
             <p class="hero">
-              Learn new skills in a day or less and earn a certificate. <a href="{{ site.gymurl }}/courses/full"><b>View All Full Courses</b></a>
+              {{ main.full_courses.hero_text }} <a href="{{ site.gymurl }}/courses/full"><b>{{ main.full_courses.hero_CTA }}</b></a>
             </p>
             <div class="promo">
               <div class="row">
                 <div class="col-md-8 promo-item">
                   <h2>
-                    Featured
+                    {{ main.full_courses.promo_label }}
                   </h2>
                   <div class="row">
                     <div class="col-md-5">
                       <figure>
-                        <a href="{{ site.gymurl }}{{ site.data.courses.GYM-107.url }}"><img alt="{{ site.data.courses.GYM-107.title }} cover image." src="{{ site.url }}/{{ site.data.courses.GYM-107.poster_art }}" decoding="async" fetchpriority="high"></a>
+                        <a href="{{ site.gymurl }}{{ courses[main.full_courses.promo_ID].url }}"><img alt="{{ courses[main.full_courses.promo_ID].title }} cover image." src="{{ site.url }}{{ courses[main.full_courses.promo_ID].poster_art }}" decoding="async" fetchpriority="high"></a>
                       </figure>
                     </div>
                     <div class="col-md-7">
                       <article>
                         <header>
                           <p class="subhead all-caps">
-                            <b>{{ site.data.courses.GYM-107.topic }}</b>
+                            <b>{{ courses[main.full_courses.promo_ID].topic }}</b>
                           </p>
                           <h2>
-                            <a href="{{ site.gymurl }}{{ site.data.courses.GYM-107.url }}">{{ site.data.courses.GYM-107.title }}</a>
+                            <a href="{{ site.gymurl }}{{ courses[main.full_courses.promo_ID].url }}">{{ courses[main.full_courses.promo_ID].title }}</a>
                           </h2>
                         </header>
                         <p>
-                          {{ site.data.courses.GYM-107.short_description }}
+                          {{ courses[main.full_courses.promo_ID].short_description }}
                         </p>
                         <div class="cta">
-                          <a class="gym-button natural" href="{{ site.gymurl }}{{ site.data.courses.GYM-107.url }}">Learn More</a>
+                          <a class="gym-button natural" href="{{ site.gymurl }}{{ courses[main.full_courses.promo_ID].url }}">Learn More</a>
                         </div>
                       </article>
                     </div>
@@ -110,38 +112,38 @@ permalink: /courses/
         <div class="white-panel">
           <article class="courses-promo">
             <h2>
-              {{ courses.short_courses.format }}
+              {{ main.gym_shorts.format }}
             </h2>
             <p class="hero">
-              Learn new skills in a few hours and earn a badge. <a href="{{ site.gymurl }}/courses/gym-shorts"><b>View All Gym Shorts</b></a>
+              {{ main.gym_shorts.hero_text }} <a href="{{ site.gymurl }}/courses/gym-shorts"><b>{{ main.gym_shorts.hero_CTA }}</b></a>
             </p>
             <div class="promo">
               <div class="row">
                 <div class="col-md-8 promo-item">
                   <h2>
-                    Featured
+                    {{ main.gym_shorts.promo_label }}
                   </h2>
                   <div class="row">
                     <div class="col-md-5">
                       <figure>
-                        <a href="{{ site.gymurl }}{{ site.data.courses.GYM-017.url }}"><img alt="{{ site.data.courses.GYM-017.title }} cover image." src="{{ site.url }}/{{ site.data.courses.GYM-017.poster_art }}" decoding="async" fetchpriority="high"></a>
+                        <a href="{{ site.gymurl }}{{ courses[main.gym_shorts.promo_ID].url }}"><img alt="{{ courses[main.gym_shorts.promo_ID].title }} cover image." src="{{ site.url }}{{ courses[main.gym_shorts.promo_ID].poster_art }}" decoding="async" fetchpriority="high"></a>
                       </figure>
                     </div>
                     <div class="col-md-7">
                       <article>
                         <header>
                           <p class="subhead all-caps">
-                            <b>{{ site.data.courses.GYM-017.topic }}</b>
+                            <b>{{ courses[main.gym_shorts.promo_ID].topic }}</b>
                           </p>
                           <h2>
-                            <a href="{{ site.gymurl }}{{ site.data.courses.GYM-017.url }}">{{ site.data.courses.GYM-017.title }}</a>
+                            <a href="{{ site.gymurl }}{{ courses[main.gym_shorts.promo_ID].url }}">{{ courses[main.gym_shorts.promo_ID].title }}</a>
                           </h2>
                         </header>
                         <p>
-                          {{ site.data.courses.GYM-017.short_description }}
+                          {{ courses[main.gym_shorts.promo_ID].short_description }}
                         </p>
                         <div class="cta">
-                          <a class="gym-button natural" href="{{ site.gymurl }}{{ site.data.courses.GYM-017.url }}">Learn More</a>
+                          <a class="gym-button natural" href="{{ site.gymurl }}{{ courses[main.gym_shorts.promo_ID].url }}">Learn More</a>
                         </div>
                       </article>
                     </div>
@@ -151,13 +153,13 @@ permalink: /courses/
                   <dl>
                     <div>
                       <dt>{{ about.lists[1] }}</dt>
-                      {%- for benefits in about.short_courses[1] -%}
+                      {%- for benefits in about.gym_shorts[1] -%}
                       <dd>{{ benefits.label }}</dd>
                       {%- endfor -%}
                     </div>
                     <div>
                       <dt>{{ about.lists[2] }}</dt>
-                      {%- for length in about.short_courses[2] -%}
+                      {%- for length in about.gym_shorts[2] -%}
                       <dd>{{ length.label }}</dd>
                       {%- endfor -%}
                     </div>
@@ -173,38 +175,38 @@ permalink: /courses/
         <div class="white-panel">
           <article class="courses-promo">
             <h2>
-              {{ courses.tutorials.format }}
+              {{ main.take5_tutorials.format }}
             </h2>
             <p class="hero">
-              Learn new skills with 5-minute tutorials. <a href="{{ site.gymurl }}/courses/take5"><b>View All Tutorials</b></a>
+              {{ main.take5_tutorials.hero_text }} <a href="{{ site.gymurl }}/courses/gym-shorts"><b>{{ main.take5_tutorials.hero_CTA }}</b></a>
             </p>
             <div class="promo">
               <div class="row">
                 <div class="col-md-8 promo-item">
                   <h2>
-                    Featured
+                    {{ main.take5_tutorials.promo_label }}
                   </h2>
                   <div class="row">
                     <div class="col-md-5">
                       <figure>
-                        <a href="{{ site.data.take5.GYM-5042.title | slugify | prepend: base_path }}"><img alt="{{ site.data.take5.GYM-5042.title }} cover image." src="{{ site.url }}/{{ site.data.take5.GYM-5042.poster_art }}" decoding="async" fetchpriority="high"></a>
+                        <a href="{{ take5[main.take5_tutorials.promo_ID].title | slugify | prepend: base_path }}"><img alt="{{ take5[main.take5_tutorials.promo_ID].title }} cover image." src="{{ site.url }}{{ take5[main.take5_tutorials.promo_ID].poster_art }}" decoding="async" fetchpriority="high"></a>
                       </figure>
                     </div>
                     <div class="col-md-7">
                       <article>
                         <header>
                           <p class="subhead all-caps">
-                            <b>{{ site.data.take5.GYM-5042.topic }}</b>
+                            <b>{{ take5[main.take5_tutorials.promo_ID].topic }}</b>
                           </p>
                           <h2>
-                            <a href="{{ site.data.take5.GYM-5042.title | slugify | prepend: base_path }}">{{ site.data.take5.GYM-5042.title }}</a>
+                            <a href="{{ take5[main.take5_tutorials.promo_ID].title | slugify | prepend: base_path }}">{{ take5[main.take5_tutorials.promo_ID].title }}</a>
                           </h2>
                         </header>
                         <p>
-                          {{ site.data.take5.GYM-5042.short_description }}
+                          {{ take5[main.take5_tutorials.promo_ID].short_description }}
                         </p>
                         <div class="cta">
-                          <a class="gym-button natural" href="{{ site.data.take5.GYM-5042.title | slugify | prepend: base_path }}">Learn More</a>
+                          <a class="gym-button natural" href="{{ take5[main.take5_tutorials.promo_ID].title | slugify | prepend: base_path }}">Learn More</a>
                         </div>
                       </article>
                     </div>
@@ -214,13 +216,13 @@ permalink: /courses/
                   <dl>
                     <div>
                       <dt>{{ about.lists[1] }}</dt>
-                      {%- for benefits in about.short_courses[1] -%}
+                      {%- for benefits in about.take5_tutorials[1] -%}
                       <dd>{{ benefits.label }}</dd>
                       {%- endfor -%}
                     </div>
                     <div>
                       <dt>{{ about.lists[2] }}</dt>
-                      {%- for length in about.short_courses[2] -%}
+                      {%- for length in about.take5_tutorials[2] -%}
                       <dd>{{ length.label }}</dd>
                       {%- endfor -%}
                     </div>
@@ -236,35 +238,35 @@ permalink: /courses/
         <div class="white-panel">
           <article class="courses-promo">
             <h2>
-              Collections
+              {{ main.collections.format }}
             </h2>
             <p class="hero">
-              Explore specific topics with free courses, tutorials, resources, and jobs. <a href="{{ site.gymurl }}/collections"><b>View All Collections</b></a>
+              {{ main.collections.hero_text }} <a href="{{ site.gymurl }}/collections"><b>{{ main.collections.hero_CTA }}</b></a>
             </p>
             <div class="promo">
               <div class="row">
                 <div class="col-md-8 promo-item">
                   <h2>
-                    Featured
+                    {{ main.collections.promo_label }}
                   </h2>
                   <div class="row">
                     <div class="col-md-5">
                       <figure>
-                        <a href="{{ site.gymurl }}/design-systems"><img alt="Design Systems Collection cover image." src="{{ site.url }}/img/hub-pages/og/design-systems-collection-og.png" decoding="async" fetchpriority="high"></a>
+                        <a href="{{ site.gymurl }}/{{ main.collections.promo_ID }}"><img alt="{{ main.collections.promo_ID | capitalize | replace: '-', ' ' }} cover image." src="{{ site.url | append: '/img/hub-pages/og/' }}{{ main.collections.promo_ID | append: '-collection-og.png' }}" decoding="async" fetchpriority="high"></a>
                       </figure>
                     </div>
                     <div class="col-md-7">
                       <article>
                         <header>
                           <h2>
-                            <a href="{{ site.gymurl }}/design-systems">Design Systems</a>
+                            <a href="{{ site.gymurl }}/{{ main.collections.promo_ID }}">{{ main.collections.promo_ID | capitalize | replace: '-', ' ' }}</a>
                           </h2>
                         </header>
                         <p>
-                          Teamwork (and creating effective pattern libraries) makes the dream work.
+                          {{ courses[main.gym_shorts.promo_ID].short_description }}
                         </p>
                         <div class="cta">
-                          <a class="gym-button natural" href="{{ site.gymurl }}/design-systems">Learn More</a>
+                          <a class="gym-button natural" href="{{ site.gymurl }}/{{ main.collections.promo_ID }}">Learn More</a>
                         </div>
                       </article>
                     </div>
@@ -273,13 +275,13 @@ permalink: /courses/
                 <div class="col-md-4">
                   <dl>
                     <div>
-                      <dt>Content Collections</dt>
+                      <dt>{{ main.collections.format | prepend: 'Content ' }}</dt>
                       <dd><a href="{{ site.gymurl }}/design-systems">Design Systems</a>
-                        <dd><a href="{{ site.gymurl }}/web-development">Web Development</a></dd>
-                        <dd><a href="{{ site.gymurl }}/ux-design">UX Design</a></dd>
-                        <dd><a href="{{ site.gymurl }}/prototyping">Prototyping</a></dd>
-                        <dd><a href="{{ site.gymurl }}/accessibility">Accessibility</a></dd>
-                        <dd><a href="{{ site.gymurl }}/remote-work">Remote Work</a></dd>
+                      <dd><a href="{{ site.gymurl }}/web-development">Web Development</a></dd>
+                      <dd><a href="{{ site.gymurl }}/ux-design">UX Design</a></dd>
+                      <dd><a href="{{ site.gymurl }}/prototyping">Prototyping</a></dd>
+                      <dd><a href="{{ site.gymurl }}/accessibility">Accessibility</a></dd>
+                      <dd><a href="{{ site.gymurl }}/remote-work">Remote Work</a></dd>
                     </div>
                   </dl>
                 </div>
