--- a/hub-pages/collections/collections.html
+++ b/hub-pages/collections/collections.html
@@ -3,23 +3,23 @@ layout: wrapper-full-default
 permalink: /collections/
 css: [/css/collections.css]
 ---
-{%- assign courses = site.data.courses-page -%}
+{%- assign main = site.data.courses-page -%}
 {%- assign about = site.data.courses-page.about_section -%}
 
 <nav class="courses-format" aria-label="Courses">
   <div class="container">
     <ul role="list">
       <li>
-        <a href="/courses/full">{{ courses.full_courses.format }}</a>
+        <a href="/courses/full">{{ main.full_courses.format }}</a>
       </li>
       <li>
-        <a href="/courses/gym-shorts">{{ courses.short_courses.format }}</a>
+        <a href="/courses/gym-shorts">{{ main.short_courses.format }}</a>
       </li>
       <li>
-        <a href="/courses/take5">{{ courses.tutorials.format }}</a>
+        <a href="/courses/take5">{{ main.tutorials.format }}</a>
       </li>
       <li>
-        <a href="/collections" aria-current="page">Collections</a>
+        <a href="/collections" aria-current="page">{{ main.collections.format }}</a>
       </li>
     </ul>
   </div>
@@ -28,8 +28,8 @@ css: [/css/collections.css]
 <main id="main" role="main">
   <header class="collections--about" id="about">
     <div class="container">
-      <h1>Content Collections</h1>
-      <p>Explore a specific topic and learn practical skills with free courses, tutorials, and resources.</p>
+      <h1>{{ main.collections.format | prepend: 'Content ' }}</h1>
+      <p>{{ main.collections.hero_text }}</p>
     </div>
   </header>
 
