--- a/hub-pages/collections/collections.html
+++ b/hub-pages/collections/collections.html
@@ -13,10 +13,10 @@ css: [/css/collections.css]
         <a href="/courses/full">{{ main.full_courses.format }}</a>
       </li>
       <li>
-        <a href="/courses/gym-shorts">{{ main.short_courses.format }}</a>
+        <a href="/courses/gym-shorts">{{ main.gym_shorts.format }}</a>
       </li>
       <li>
-        <a href="/courses/take5">{{ main.tutorials.format }}</a>
+        <a href="/courses/take5">{{ main.take5_tutorials.format }}</a>
       </li>
       <li>
         <a href="/collections" aria-current="page">{{ main.collections.format }}</a>
