--- a/hub-pages/prototyping/index.html
+++ b/hub-pages/prototyping/index.html
@@ -5,6 +5,7 @@ css: [/css/hub-pages.css]
 ---
 {%- assign main = site.data.courses-page -%}
 
+
 <nav class="courses-format" aria-label="Courses">
   <div class="container">
     <ul role="list">
@@ -12,10 +13,10 @@ css: [/css/hub-pages.css]
         <a href="/courses/full">{{ main.full_courses.format }}</a>
       </li>
       <li>
-        <a href="/courses/gym-shorts">{{ main.short_courses.format }}</a>
+        <a href="/courses/gym-shorts">{{ main.gym_shorts.format }}</a>
       </li>
       <li>
-        <a href="/courses/take5">{{ main.tutorials.format }}</a>
+        <a href="/courses/take5">{{ main.take5_tutorials.format }}</a>
       </li>
       <li>
         <a href="/collections" aria-current="page">{{ main.collections.format }}</a>
