Update course format pages
- Update about section variables

--- a/courses/gym-shorts/index.html
+++ b/courses/gym-shorts/index.html
@@ -32,10 +32,10 @@ permalink: /courses/gym-shorts/
 
   <header class="about">
     <div class="container">
-      <h1>{{ courses.gym_shorts.format }}</h1>
+      <h1>{{ main.gym_shorts.format }}</h1>
       <p>
         <span class="block"><strong>Free online short courses.</strong> Earn a badge in a few hours.</span>
-        {{ courses.main.short_description }}
+        {{ main.main.short_description }}
       </p>
       <dl class="row">
         <div class="col-md-5">
