--- a/courses/take5/index.html
+++ b/courses/take5/index.html
@@ -32,8 +32,8 @@ css: [/css/take5.css]
 
     <header class="take5--about" id="about">
       <div class="container">
-        <h1>Take 5</h1>
-        <p><span class="block"><strong>Free online video tutorials.</strong> Practical skills in 5 minutes.</span> {{ courses.main.short_description }}</p>
+        <h1>{{ main.take5_tutorials.format }}</h1>
+        <p><span class="block"><strong>Free online video tutorials.</strong> Practical skills in 5 minutes.</span> {{ main.main.short_description }}</p>
         <dl class="row">
           <div class="col-md-4">
             <dt>{{ about.lists[1] }}</dt>
