--- a/courses/full/index.html
+++ b/courses/full/index.html
@@ -32,10 +32,10 @@ permalink: /courses/full/
 
   <header class="about">
     <div class="container">
-      <h1>{{ courses.full_courses.format }}</h1>
+      <h1>{{ main.full_courses.format }}</h1>
       <p>
         <span class="block"><strong>Free online full courses.</strong> Earn a certificate in a day or less.</span>
-        {{ courses.main.short_description }}
+        {{ main.main.short_description }}
       </p>
       <dl class="row">
         <div class="col-md-5">
