Update diversity in tech
- Add Empowr link

--- a/static-pages/social-impact/index.html
+++ b/static-pages/social-impact/index.html
@@ -56,6 +56,7 @@ css: [/css/static-main-content.css]
       <section id="diversity-in-tech">
         <h3>Diversity in Tech</h3>
         <ul>
+          <li><a href="https://www.empowrco.org">Empowr</a></li>
           <li><a href="https://www.resilientcoders.org">Resilient Coders</a></li>
           <li><a href="https://blacktechpipeline.com">Black Tech Pipeline</a></li>
         </ul>
