--- a/courses/gym-shorts/index.html
+++ b/courses/gym-shorts/index.html
@@ -7,7 +7,9 @@ permalink: /courses/gym-shorts/
 {%- endif -%}
 
 {%- assign main = site.data.courses-page -%}
-{%- assign about = site.data.courses-page.about_section -%}
+{%- assign featured = site.data.courses-page.featured -%}
+{%- assign about = site.data.courses-page.about -%}
+{%- assign courses = site.data.courses -%}
 
 <nav class="courses-format" aria-label="Courses">
   <div class="container">
@@ -35,7 +37,7 @@ permalink: /courses/gym-shorts/
       <h1>{{ main.gym_shorts.format }}</h1>
       <p>
         <span class="block"><strong>Free online short courses.</strong> Earn a badge in a few hours.</span>
-        {{ main.main.short_description }}
+        {{ main.short_description }}
       </p>
       <dl class="row">
         <div class="col-md-5">
