--- a/hub-pages/collections/collections.html
+++ b/hub-pages/collections/collections.html
@@ -4,7 +4,7 @@ permalink: /collections/
 css: [/css/collections.css]
 ---
 {%- assign main = site.data.courses-page -%}
-{%- assign about = site.data.courses-page.about_section -%}
+{%- assign about = site.data.courses-page.about -%}
 
 <nav class="courses-format" aria-label="Courses">
   <div class="container">
