uses DRY-ness for course format nav

--- a/courses/gym-shorts/index.html
+++ b/courses/gym-shorts/index.html
@@ -11,24 +11,8 @@ permalink: /courses/gym-shorts/
 {%- assign about = site.data.courses-page.about -%}
 {%- assign courses = site.data.courses -%}
 
-<nav class="courses-format" aria-label="Courses">
-  <div class="container">
-    <ul role="list">
-      <li>
-        <a href="/courses/full">{{ main.full_courses.format }}</a>
-      </li>
-      <li>
-        <a href="/courses/gym-shorts" aria-current="page">{{ main.gym_shorts.format }}</a>
-      </li>
-      <li>
-        <a href="/courses/take5">{{ main.take5_tutorials.format }}</a>
-      </li>
-      <li>
-        <a href="/collections">{{ main.collections.format }}</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+{%- assign page_active = "gym-shorts" -%}
+{%- include partials/nav-courses-format.html -%}
 
 <section class="find-courses" id="catalog">
 
