--- a/courses/index.html
+++ b/courses/index.html
@@ -12,24 +12,7 @@ permalink: /courses/
 {%- assign courses = site.data.courses -%}
 {%- assign take5 = site.data.take5 -%}
 
-<nav class="courses-format" aria-label="Courses">
-  <div class="container">
-    <ul role="list">
-      <li>
-        <a href="/courses/full">{{ main.full_courses.format }}</a>
-      </li>
-      <li>
-        <a href="/courses/gym-shorts">{{ main.gym_shorts.format }}</a>
-      </li>
-      <li>
-        <a href="/courses/take5">{{ main.take5_tutorials.format }}</a>
-      </li>
-      <li>
-        <a href="/collections">{{ main.collections.format }}</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+{%- include partials/nav-courses-format.html -%}
 
 <section class="find-courses" id="catalog">
 
