--- a/courses/take5/index.html
+++ b/courses/take5/index.html
@@ -7,24 +7,8 @@ css: [/css/take5.css]
 {%- assign main = site.data.courses-page -%}
 {%- assign about = site.data.courses-page.about -%}
 
-<nav class="courses-format" aria-label="Courses">
-  <div class="container">
-    <ul role="list">
-      <li>
-        <a href="/courses/full">{{ main.full_courses.format }}</a>
-      </li>
-      <li>
-        <a href="/courses/gym-shorts">{{ main.gym_shorts.format }}</a>
-      </li>
-      <li>
-        <a href="/courses/take5" aria-current="page">{{ main.take5_tutorials.format }}</a>
-      </li>
-      <li>
-        <a href="/collections">{{ main.collections.format }}</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+{%- assign page_active = "take5" -%}
+{%- include partials/nav-courses-format.html -%}
 
 <main id="main" role="main">
 
